--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,7 +1,69 @@
+html {
+    height: 100%;
+}
+
 body {
-    background-color: #f8f9fa !important;
+    background: url("/img/1.jpg") no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+}
+
+.container-fluid {
+    padding: 0;
 }
 
 h1 {
     color: brown;
+}
+
+.form-group label {
+    color: #c31432;
+    font-weight: 700;
+    font-size: 1.4em;
+}
+
+.form-group {
+    background: rgba(255, 255, 255, 0.7);
+}
+
+.bg-navbar {
+    background:linear-gradient(to right,#FFFAFA, #FFFF);;
+}
+
+.mega{
+ background: linear-gradient(to right, #bc4e9c, #f80759);
+}
+
+.hours {
+    background: linear-gradient(to right, #c31432, #240b36);
+}
+
+.lime {
+    background: linear-gradient(to right, #11998e, #38ef7d);
+}
+
+.orange {
+    background: linear-gradient(to right, #fc4a1a, #f7b733);
+}
+
+.sky {
+    background: linear-gradient(to right, #6190E8, #A7BFE8);
+}
+
+.atlas {
+    background: linear-gradient(to right, #FEAC5E, #C779D0, #4BC0C8);
+}
+
+.star-rating {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+}
+
+.star {
+    padding: 1px;
+    color: #fd0;
+    font-size: 20px;
+    list-style-type: none;
+    display: inline-block;
 }
