--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -3,6 +3,10 @@ body {
     color: #666;
 }
 
+.form-group {
+    background: transparent;
+}
+
 .login-container {
     height: 100vh;
     width: 100%;
