--- a/src/main/resources/static/view/adminPage.html
+++ b/src/main/resources/static/view/adminPage.html
@@ -7,8 +7,7 @@
 
     .form-group input,
     .form-group select,
-    .form-group span,
-    .form-group label {
+    .form-group span {
         margin-top: 10px;
         margin-bottom: 10px;
     }
