--- a/src/main/resources/static/view/place.html
+++ b/src/main/resources/static/view/place.html
@@ -1,34 +1,35 @@
-<div class="container"  ng-controller="placePageController">
-    <div class="row">
-        <form ng-submit="addPlace()" method="post" class="col-12">
-            <div class="form-group col-lg-3 col-sm-6">
+<div class="container h-100"  ng-controller="placePageController">
+    <div class="row align-items-center h-100">
+        <form ng-submit="addPlace()" method="post" class="mx-auto">
+            <div class="form-group">
                 <label>Country</label>
                 <select class="form-control" ng-model="model.countryId" ng-change="findCities()" required>
                     <option ng-repeat="c in countries" value="{{c.id}}">{{c.name}}</option>
                 </select>
             </div>
-            <div ng-if="model.countryId" class="form-group col-lg-3 col-sm-6">
+            <div ng-if="model.countryId" class="form-group">
                 <label>City</label>
                 <select class="form-control" ng-model="model.cityId" >
                         <option ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</option>
                 </select>
             </div>
-            <div class="form-group col-lg-3 col-sm-6">
+            <div class="form-group">
                 <label>Type</label>
                 <select name="typeSelect" class="form-control" ng-model="model.typeId" required ng-required="">
                     <option ng-repeat="t in types" value="{{t.id}}">{{t.name}}</option>
                 </select>
             </div>
-            <div class="form-group col-lg-3 col-sm-6">
+            <div class="form-group">
                 <label>Name</label>
                 <input name="placeName" type="text" class="form-control" ng-model="model.name" required>
                 <input type="submit" value="Add" class="btn btn-primary my-2">
             </div>
         </form>
-    </div>
-    <div ng-show="postErrors">
-        <div ng-repeat="e in postErrors" class="alert alert-danger" role="alert">
-            <h4 class="alert-heading">{{ e }}</h4>
+
+        <div ng-show="postErrors">
+            <div ng-repeat="e in postErrors" class="alert alert-danger" role="alert">
+                <h4 class="alert-heading">{{ e }}</h4>
+            </div>
         </div>
     </div>
 </div>
